[package]
name = "spider-util"
version = "0.1.7"
edition = "2024"
description = "Shared utility functions and types for the spider-lib ecosystem"
license = "MIT"
documentation = "https://docs.rs/spider-util"
homepage = "https://github.com/spider-lib/spider-util"
repository = "https://github.com/spider-lib/spider-util"
readme = "README.md"

[dependencies]
bincode = { version = "1.3" }
bytes = { version = "1.11.1", features = ["serde"] }
csv = { version = "1.1" }
dashmap = { version = "6.1.0", features = ["serde"] }
futures-util = "0.3"
http = "1.4.0"
linkify = { version = "0.10.0" }
once_cell = "1.19"
parking_lot = "0.12"
psl = "2.1.183"
reqwest = { version = "0.13.1", features = ["json", "native-tls"], default-features = false }
rusqlite = { version = "0.31" }
scraper = "0.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
seahash = "4.1.0"
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }
twox-hash = "2.1.2"

